--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,261 @@
 	Forty by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
 */
+
+
+.puzzle * {
+  position: absolute;
+}
+
+.puzzle {
+  height: 300px;
+  width: 300px;
+  margin: auto;
+  transform: translateY(50%);
+  top: 50%;
+  left: 50%;
+}
+
+.puzzle-left {
+  height: 25%;
+  width: 25%;
+  border: 2px solid;
+  border-radius: 10%;
+  top: 0;
+  left: 0;
+  background-color: #5d3672;
+  //box-shadow: 10px 10px 0px #e8e3e7;
+  animation-name: move-left;
+  animation-duration: 2s;
+  animation-iteration-count: 2s;
+  z-index: 1;
+}
+
+  @keyframes move-left {
+    0% { top: 0%; transform: translateY(0%); }
+    50% { top: 37%; left: 37%; transform: translate(-50%, -50%); opacity: 80%;}
+    100% { top: 0%; transform: translateY(0%); opacity: 0;}
+  }
+
+.puzzle-right {
+  height: 25%;
+  width: 25%;
+  border: 2px solid;
+  border-radius: 10%;
+  top: 0;
+  right: 0;
+  background-color: orange;
+  //box-shadow: 10px 10px 0px #e8e3e7;
+  animation-name: move-right;
+  animation-duration: 2s;
+  animation-iteration-count: 2s;
+}
+
+  @keyframes move-right {
+    0% { top: 0%; transform: translateY(0%); }
+    50% { top: 37%; right: 37%; transform: translate(50%, -50%);opacity: 80%; }
+    100% { top: 0%; transform: translateY(0%); opacity: 0%;}
+  }
+
+.puzzle-left-lower {
+  height: 25%;
+  width: 25%;
+  border: 2px solid;
+  border-radius: 10%;
+  bottom: 0;
+  left: 0;
+  background-color: orange;
+  //box-shadow: 10px 10px 0px #e8e3e7;
+  animation-name: move-left-up;
+  animation-duration: 2s;
+  animation-iteration-count: 2s;
+}
+
+  @keyframes move-left-up {
+    0% { bottom: 0%; transform: translateY(0%); }
+    50% { bottom: 37%; left: 37%; transform: translate(-50%, 50%); opacity: 80%;}
+    100% { bottom: 0%; transform: translateY(0%); opacity: 0;}
+  }
+
+.puzzle-right-lower {
+  height: 25%;
+  width: 25%;
+  border: 2px solid;
+  border-radius: 10%;
+  bottom: 0;
+  right: 0;
+  background-color: #5d3672;
+ // box-shadow: 10px 10px 0px #e8e3e7;
+  animation-name: move-right-up;
+  animation-duration: 2s;
+  animation-iteration-count: 2s;
+  z-index: -1;
+}
+
+  @keyframes move-right-up {
+    0% { bottom: 0%; transform: translateY(0%); }
+    50% { bottom: 37%; right: 37%; transform: translate(50%, 50%); opacity: 80%;}
+    100% { bottom: 0%; transform: translateY(0%); opacity: 0;}
+  }
+
+.puzzle-left-right {
+  height: 30%;
+  width: 30%;
+  border: 2px solid;
+  border-radius: 50%;
+  top: 50%;
+  right: -29%;
+  transform: translateY(-50%);
+  border-left-color: transparent;
+  background-color: #5d3672;
+  //box-shadow: 10px 10px 0px #e8e3e7;
+}
+
+.puzzle-left-bottom {
+  height: 30%;
+  width: 30%;
+  border: 2px solid;
+  border-radius: 50%;
+  left: 50%;
+  bottom: -29%;
+  transform: translateX(-50%);
+  border-top-color: transparent;
+  background-color: #5d3672;
+  //box-shadow: 10px 10px 0px #e8e3e7;
+}
+
+
+
+.puzzle-right-right::before {
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  background-color: #e8e3e7;
+  //content: "";
+  position: absolute;
+  bottom: 0%;
+  right: -10%;
+  border-right: 2px solid #e8e3e7;
+}
+
+.puzzle-right-right::after {
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  background-color: white;
+  //content: "";
+  position: absolute;
+  bottom: -50%;
+  right: -100%;
+  border-right: 2px solid white;
+}
+
+.puzzle-right-left {
+  height: 30%;
+  width: 30%;
+  border: 2px solid;
+  border-radius: 50%;
+  top: 50%;
+  left: -8%;
+  transform: translateY(-50%);
+  border-left-color: transparent;
+  background-color: white;
+}
+
+.puzzle-right-bottom {
+  height: 30%;
+  width: 30%;
+  border: 2px solid;
+  border-radius: 50%;
+  left: 50%;
+  bottom: -29%;
+  transform: translateX(-50%);
+  border-top-color: transparent;
+  background-color: orange;  
+  //box-shadow: 10px 10px 0px #e8e3e7;
+}
+
+
+.puzzle-left-lower-right {
+  height: 30%;
+  width: 30%;
+  border: 2px solid;
+  border-radius: 50%;
+  top: 50%;
+  right: -29%;
+  transform: translateY(-50%);
+  border-left-color: transparent;
+  background-color: orange;
+  //box-shadow: 10px 10px 0px #e8e3e7;
+}
+
+
+.puzzle-left-lower-bottom::before {
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  background-color: #e8e3e7;
+  //content: "";
+  position: absolute;
+  bottom: -10%;
+  left: 0%;
+  border-bottom: 2px solid #e8e3e7;
+}
+
+.puzzle-left-lower-bottom::after {
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  background-color: white;
+  //content: "";
+  position: absolute;
+  bottom: -90%;
+  left: 50%;
+}
+
+.puzzle-left-lower-top {
+  height: 30%;
+  width: 30%;
+  border: 2px solid;
+  border-radius: 50%;
+  top: -8%;
+  left: 50%;
+  transform: translateX(-50%);
+  border-top-color: transparent;
+  background-color: white;
+}
+
+
+
+.puzzle-right-lower-left {
+  height: 30%;
+  width: 30%;
+  border: 2px solid;
+  border-radius: 50%;
+  top: 50%;
+  left: -8%;
+  transform: translateY(-50%);
+  border-left-color: transparent;
+  background-color: white;
+}
+
+.puzzle-right-lower-top {
+  height: 30%;
+  width: 30%;
+  border: 2px solid;
+  border-radius: 50%;
+  top: -8%;
+  left: 50%;
+  transform: translateX(-50%);
+  border-top-color: transparent;
+  background-color: white;
+}
+
+
+
+
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
